@@ -1,3 +1,10 @@
+2003-02-07  Stephane Carrez  <stcarrez@nerim.fr>
+
+	* Makefile.am (SUBDIRS): Add examples.
+	* Makefile.in: Generate.
+	* configure.in: Configure example Makefile.
+	* configure: Generate.
+
 2003-02-02  Stephane Carrez  <stcarrez@nerim.fr>
 
 	* bfdada/Makefile.in: Fix install.
